# todolist

./: Cargo.toml  README.md  Trunk.toml  app.css  index.html  tailwind.config.js
src/: main.rs
