[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
log = "0.4.20"
serde = "1.0.189"
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.21.0", features = ["csr"] }
